--- a/modules-available/rebootcontrol/style.css
+++ b/modules-available/rebootcontrol/style.css
@@ -1,25 +1,3 @@
-.rebootTimerForm {
-    margin-top: 20px;
-}
-
-.statusColumn {
-    text-align: center;
-}
-
-.table > tbody > tr > td {
-    vertical-align: middle;
-    height: 50px;
-}
-
-.checkbox {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.select-button {
-    min-width: 150px;
-}
-
 #dataTable {
     margin-top: 20px;
 }
@@ -33,6 +11,10 @@ pre {
     white-space: pre-wrap;
 }
 
-th[data-sort] {
-    cursor: pointer;
+div.loc {
+    margin: 1px 2px;
+    border-radius: 2px;
+    padding: 1px 3px;
+    background: #eee;
+    float: left;
 }
