[statistics/rebootcontrol] Add remote exec UI

--- a/modules-available/rebootcontrol/templates/status-wol.html
+++ b/modules-available/rebootcontrol/templates/status-wol.html
@@ -4,7 +4,7 @@
 <div class="clearfix slx-space"></div>
 
 {{#tasks}}
-<div data-tm-id="{{id}}" data-tm-callback="wolCallback">{{lang_aWolJob}}</div>
+<div data-tm-id="{{.}}" data-tm-callback="wolCallback">{{lang_aWolJob}}</div>
 {{/tasks}}
 {{^tasks}}
 <div class="alert alert-warning">
