--- a/modules-available/rebootcontrol/templates/status-exec.html
+++ b/modules-available/rebootcontrol/templates/status-exec.html
@@ -1,55 +1,63 @@
-
 <div data-tm-id="{{id}}" data-tm-log="error" data-tm-callback="updateStatus">{{lang_executingRemotely}}</div>
 
 <div class="slx-space"></div>
 
+<div class="list-group">
+	<div class="list-group-item">
 <div class="row">
-	<div class="col-md-5 slx-bold">{{lang_host}}</div>
-	<div class="col-md-5 slx-bold">{{lang_status}}</div>
-	<div class="col-md-2 slx-bold text-right">{{lang_exitCode}}</div>
+	<div class="col-md-6 col-sm-8 col-xs-12 slx-bold">{{lang_host}}</div>
+	<div class="col-md-4 col-sm-2 col-xs-6 slx-bold">{{lang_status}}</div>
+	<div class="col-md-2 col-sm-2 col-xs-6 slx-bold text-right">{{lang_exitCode}}</div>
 </div>
+	</div>
 
 {{#clients}}
-<div class="slx-space" id="client-{{machineuuid}}">
+<div class="list-group-item" id="client-{{machineuuid}}">
 	<div class="row">
-		<div class="col-md-5 slx-bold">{{hostname}}{{^hostname}}{{clientip}}{{/hostname}}</div>
-		<div class="col-md-5 state"></div>
-		<div class="col-md-2 text-right exitCode"></div>
+		<div class="col-md-6 col-sm-8 col-xs-12 slx-bold">{{hostname}}{{^hostname}}{{clientip}}{{/hostname}}</div>
+		<div class="col-md-4 col-sm-2 col-xs-6 state"></div>
+		<div class="col-md-2 col-sm-2 col-xs-6 text-right exitCode"></div>
 	</div>
-	<i>{{lang_stdout}}</i>
-	<pre class="stdout"></pre>
-	<i>{{lang_stderr}}</i>
-	<pre class="stderr"></pre>
+	<div class="stdout collapse">
+		<i>{{lang_stdout}}</i>
+		<pre></pre>
+	</div>
+	<div class="stderr collapse">
+		<i>{{lang_stderr}}</i>
+		<pre></pre>
+	</div>
 </div>
-<hr>
 {{/clients}}
+</div>
 
 <script><!--
 
-var ingoreHosts = {};
+var ignoreHosts = {};
 
 function updateStatus(task) {
 	if (!task || !task.data || !task.data.result)
 		return;
 	for (var host in task.data.result) {
-		if (ingoreHosts[host] || !task.data.result.hasOwnProperty(host))
+		if (!task.data.result.hasOwnProperty(host) || ignoreHosts[host])
 			continue;
 		updateStatusClient(host, task.data.result[host]);
 	}
 }
+
 function updateStatusClient(id, status) {
 	var $p = $('#client-' + id);
 	if ($p.length === 0)
 		return;
 	$p.find('.state').text(status.state);
-	$p.find('.stdout').text(status.stdout);
-	$p.find('.stderr').text(status.stderr);
+	if (status.stdout) $p.find('.stdout').show().find('pre').text(status.stdout);
+	if (status.stderr) $p.find('.stderr').show().find('pre').text(status.stderr);
 	if (status.state === 'DONE' || status.state === 'ERROR' || status.state === 'TIMEOUT') {
 		$p.find('.state').addClass((status.state === 'DONE') ? 'text-success' : 'text-danger');
 		if (status.exitCode >= 0) {
 			$p.find('.exitCode').text(status.exitCode).addClass((status.exitCode === 0 ? 'text-success' : 'text-danger'));
 		}
-		ingoreHosts[id] = true;
+		ignoreHosts[id] = true;
 	}
 }
+
 //--></script>
