--- a/modules-available/rebootcontrol/templates/exec-enter-command.html
+++ b/modules-available/rebootcontrol/templates/exec-enter-command.html
@@ -1,33 +1,35 @@
 <h2>{{lang_execRemoteCommand}}</h2>
 
-<table class="table table-hover stupidtable" id="dataTable">
-	<thead>
-	<tr>
-		<th data-sort="string">{{lang_client}}</th>
-		<th data-sort="ipv4">{{lang_ip}}</th>
-		<th data-sort="string">
-			{{lang_status}}
-		</th>
-	</tr>
-	</thead>
-
-	<tbody>
-	{{#clients}}
-	<tr>
-		<td>{{hostname}}{{^hostname}}{{machineuuid}}{{/hostname}}</td>
-		<td>{{clientip}}</td>
-		<td>{{state}}</td>
-	</tr>
-	{{/clients}}
-	</tbody>
-</table>
-
-<h3>{{lang_enterCommand}}</h3>
-
 <form method="post" action="?do=rebootcontrol" id="list-form">
 	<input type="hidden" name="token" value="{{token}}">
 	<input type="hidden" name="show" value="exec">
-	<input type="hidden" name="id" value="{{id}}">
+	<table class="table table-hover stupidtable" id="dataTable">
+		<thead>
+		<tr>
+			<th data-sort="string">{{lang_client}}</th>
+			<th data-sort="ipv4">{{lang_ip}}</th>
+			<th data-sort="string">
+				{{lang_status}}
+			</th>
+		</tr>
+		</thead>
+
+		<tbody>
+		{{#clients}}
+		<tr>
+			<td>
+				{{hostname}}{{^hostname}}{{machineuuid}}{{/hostname}}
+				<input type="hidden" name="uuid[]" value="{{machineuuid}}">
+			</td>
+			<td>{{clientip}}</td>
+			<td>{{state}}</td>
+		</tr>
+		{{/clients}}
+		</tbody>
+	</table>
+
+	<h3>{{lang_enterCommand}}</h3>
+
 	<div>
 		<label for="script-text">{{lang_scriptOrCommand}}</label>
 		<textarea id="script-text" class="form-control" name="script" rows="10"></textarea>
