[statistics] Add NVMe support

--- a/modules-available/statistics/templates/machine-hdds.html
+++ b/modules-available/statistics/templates/machine-hdds.html
@@ -19,6 +19,9 @@
 					{{#s_PowerOnHours}}
 					<div>{{lang_powerOnTime}}: {{s_PowerOnHours}}&thinsp;{{lang_hours}} ({{PowerOnTime}})</div>
 					{{/s_PowerOnHours}}
+					{{#s_MediaandDataIntegrityErrors}}
+					<div class="red">{{lang_mediaIntegrityErrors}}: {{s_MediaandDataIntegrityErrors}}</div>
+					{{/s_MediaandDataIntegrityErrors}}
 					<div class="row">
 						<div class="col-sm-7">
 							<table class="table table-condensed table-striped table-responsive">
