--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -182,7 +182,7 @@
 								{{lang_configVars}}
 							</td>
 							<td>
-								<a class="btn btn-sm btn-default" href="?do=baseconfig&amp;module=statistics&amp;machineuuid={{machineuuid}}">
+								<a class="btn btn-sm btn-default" href="?do=baseconfig&amp;module=statistics&amp;machineuuid={{machineuuid}}&amp;redirect={{qstr_urlencode}}">
 									<span class="glyphicon glyphicon-edit"></span>
 									{{lang_edit}} ({{overriddenVars}})
 								</a>
