--- a/modules-available/rebootcontrol/templates/subnet-list.html
+++ b/modules-available/rebootcontrol/templates/subnet-list.html
@@ -1,6 +1,6 @@
-<!-- subnetid, start, end, fixed, isdirect, lastdirectcheck, lastseen, seencount -->
+<h2>{{lang_wolReachability}}</h2>
 
-<h2>{{lang_subnets}}</h2>
+<h3>{{lang_subnets}}</h3>
 
 <p>{{lang_subnetsDescription}}</p>
 
