Fix some typos (found by codespell)
Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/modules-available/roomplanner/templates/item-selector.html
+++ b/modules-available/roomplanner/templates/item-selector.html
@@ -34,7 +34,7 @@
 					</li>
 					<li>
 						<div itemtype="furniture" scalable="v" itemlook="wall-vertical" class="draggable"
-							  style="width:25px; height:100px;" data-height="100" data-width="25" title="Wand (vertial)"></div>
+							  style="width:25px; height:100px;" data-height="100" data-width="25" title="Wand (vertikal)"></div>
 					</li>
 					<li>
 						<div itemtype="furniture" scalable="h" itemlook="window-horizontal" class="draggable"
